Fix gap of image block in Paragraph styling that shows in chrome

--- a/theme/themes/pastanaga/extras/blocks.less
+++ b/theme/themes/pastanaga/extras/blocks.less
@@ -112,6 +112,7 @@
 
 .block.align.left {
   z-index: 2;
+  margin-bottom: 0px;
 
   &.video .video-inner,
   &.maps iframe,
@@ -146,6 +147,7 @@
 
 .block.align.right {
   z-index: 2;
+  margin-bottom: 0px;
 
   &.maps iframe,
   &.video .video-inner,
